results/SVCOMP/conversational/log-StringBuilderCapLen04-2024_03_16_03_27_52.txt
public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
                             ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
                             ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
                             ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
                             ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
                             ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
                             ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
                             ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
                             ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
                             ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> (new StringBuilder(arg)).capacity() == 69;
                             ^
1 error

